* added myself to the uploaders * fixed dependency on module-init-tools for kernel 2.6 * added some small acks to avoid removing and unpacking kernel sources   again and again when testing builds, use with:    UML_MAINT_MODE=1 dpkg-buildpackage -uc -us -Ilinux-source-2.6.16    UML_MAINT_MODE=1 ./debian/rules clean * using dpatch to apply patches, currently only a patch to fix uml_net   path usage as we install to /usr/lib/uml/ * updated config for 2.6.16 * installing uml defconfig as a reference * converted lots of stuff to modular build

--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,8 @@ Source: user-mode-linux
 Section: misc
 Priority: extra
 Maintainer: Stefano Melchior <stefano.melchior@openlabs.it>
-Build-Depends: debhelper (>> 4.0.0), linux-source-2.6.15, docbook-to-man, bzip2, m4, modutils
-Uploaders: Andreas Schuldei <andreas@schuldei.org>
+Build-Depends: debhelper (>> 4.0.0), dpatch, linux-source-2.6.16, docbook-to-man, bzip2, m4, module-init-tools
+Uploaders: Andreas Schuldei <andreas@schuldei.org>, Mattia Dongili <malattia@debian.org>
 Standards-Version: 3.6.2
 
 Package: user-mode-linux
