--- a/debian/rules
+++ b/debian/rules
@@ -9,7 +9,7 @@
 export DH_COMPAT=4
 
 config_target:=oldconfig
-kernel_version:=2.6.15
+kernel_version:=2.6.16
 kernel_dir:=linux-source-$(kernel_version)
 debian:=$(CURDIR)/debian
 tmp:=$(debian)/user-mode-linux
@@ -19,13 +19,20 @@ ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
 KBUILDVARS := CFLAGS_KERNEL=-O1
 endif
 
+unpack_clean_sources:=$(shell if [ -d $(kernel_dir) ] && [ -n "$(UML_MAINT_MODE)" ] ; then echo 1 ; fi)
+
 unpack: unpack-stamp
 unpack-stamp:
+ifeq (,$(unpack_clean_sources))
 	tar -x --bzip2 -f /usr/src/linux-source-$(kernel_version).tar.bz2
+else
+	@echo "UML Maintainer mode and kernel sources already unpacked"
+endif
 	touch $@
 
 patch: patch-stamp
 patch-stamp: unpack-stamp
+	dpatch --workdir $(kernel_dir) apply-all
 	touch $@
 
 $(kernel_dir)/.config: config
@@ -40,7 +47,7 @@ configure-stamp: patch-stamp $(kernel_dir)/.config
 	touch $@
 
 build: build-stamp
-build-stamp: configure-stamp
+build-stamp: configure
 	dh_testdir
 
 	$(MAKE) -C $(kernel_dir) $(KBUILDVARS) linux modules ARCH=um
@@ -48,14 +55,26 @@ build-stamp: configure-stamp
 
 	touch $@
 
-clean:
+clean: clean-patched unpatch
+clean-patched:
 	dh_testdir
 	dh_testroot
-	rm -f unpack-stamp patch-stamp build-stamp configure-stamp
+	rm -f unpack-stamp build-stamp configure-stamp
 
-	rm -rf $(kernel_dir) linux.1 $(tmpmodules) changelog
+ifeq (,$(unpack_clean_sources))
+	rm -rf $(kernel_dir)
+else
+	@echo "UML Maintainer mode, not just cleaning kernel directory tree."
+	cd $(kernel_dir) && make clean mrproper && cd ..
+	rm -rf $(kernel_dir)/linux
+endif
+	rm -rf linux.1 $(tmpmodules) changelog
 
 	dh_clean
+
+unpatch:
+	dpatch --workdir $(kernel_dir) deapply-all
+	rm -rf patch-stamp $(kernel_dir)/debian/patched
 
 install: build
 	dh_testdir
@@ -78,6 +97,9 @@ endif
 
 	install -m 644 $(kernel_dir)/.config \
 		$(tmp)/usr/share/doc/user-mode-linux/config
+
+	install -m 644 umldefconfig \
+		$(tmp)/usr/share/doc/user-mode-linux/defconfig
 
 	install -m 644 debian/lintian.overrides \
 		$(tmp)/usr/share/lintian/overrides/user-mode-linux
