--- a/debian/rules
+++ b/debian/rules
@@ -45,7 +45,7 @@ build-stamp: configure
 	dh_testdir
 
 	$(MAKE) -C $(kernel_dir) $(KBUILDVARS) linux modules ARCH=um
-	docbook-to-man linux.sgml > linux.1
+	docbook-to-man linux.sgml > linux.uml.1
 
 	touch $@
 
@@ -69,7 +69,7 @@ install: build
 	dh_clean -k
 	dh_installdirs usr/bin usr/lib/uml usr/share/doc/user-mode-linux
 
-	install $(kernel_dir)/linux $(tmp)/usr/bin
+	install $(kernel_dir)/linux $(tmp)/usr/bin/linux.uml
 	$(MAKE) -C $(kernel_dir) modules_install ARCH=um \
 		INSTALL_MOD_PATH=$(tmpmodules)
 ifeq (,$(findstring nostrip,$(DEB_BUILD_OPTIONS)))
@@ -77,6 +77,7 @@ ifeq (,$(findstring nostrip,$(DEB_BUILD_OPTIONS)))
 		| xargs --no-run-if-empty strip --strip-debug
 endif
 	-rm $(tmpmodules)/lib/modules/*/build
+	-rm $(tmpmodules)/lib/modules/*/source
 	mv $(tmpmodules)/lib/modules \
 		$(tmp)/usr/lib/uml/modules
 	rm -rf $(tmpmodules)
@@ -86,6 +87,7 @@ endif
 
 	install -m 644 umldefconfig \
 		$(tmp)/usr/share/doc/user-mode-linux/defconfig
+	
 
 # Build architecture-independent files here.
 binary-indep: build install
@@ -105,7 +107,7 @@ binary-arch: build install
 #	dh_installmime
 #	dh_installinit
 	dh_installcron
-	dh_installman linux.1
+	dh_installman linux.uml.1
 	dh_installinfo
 #	dh_undocumented
 	dh_installchangelogs $(CURDIR)/debian/changelog
