--- a/debian/rules
+++ b/debian/rules
@@ -56,7 +56,7 @@ clean-unpatched: unpatch
 	dh_testroot
 	rm -f unpack-stamp build-stamp configure-stamp
 
-	rm -rf $(kernel_dir) linux.1 $(tmpmodules) changelog
+	rm -rf $(kernel_dir) linux.uml.1 $(tmpmodules) changelog
 
 	dh_clean
 
