--- a/debian/rules
+++ b/debian/rules
@@ -20,6 +20,23 @@ ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
 KBUILDVARS := CFLAGS_KERNEL=-O1
 endif
 
+# development only targets
+#
+oldconfig: unpack
+	cp config.$(DEB_HOST_ARCH) $(kernel_dir)
+	make -C $(kernel_dir) oldconfig ARCH=um
+	cp config.$(DEB_HOST_ARCH) config.$(DEB_HOST_ARCH).oldconfig.old
+	cp $(kernel_dir)/.config config.$(DEB_HOST_ARCH)
+
+menuconfig: unpack
+	cp config.$(DEB_HOST_ARCH) $(kernel_dir)
+	make -C $(kernel_dir)  menuconfig ARCH=um
+	cp config.$(DEB_HOST_ARCH) config.$(DEB_HOST_ARCH).menuconfig.old
+	cp $(kernel_dir)/.config config.$(DEB_HOST_ARCH)
+# 
+# end development only targets
+
+
 unpack: unpack-stamp
 unpack-stamp:
 	tar -x --bzip2 -f /usr/src/linux-source-$(kernel_version).tar.bz2
