--- a/debian/rules
+++ b/debian/rules
@@ -6,7 +6,7 @@
 #export DH_VERBOSE=1
 
 config_target:=oldconfig
-kernel_version:=2.6.20
+kernel_version:=2.6.21
 kernel_dir:=linux-source-$(kernel_version)
 debian:=$(CURDIR)/debian
 tmp:=$(debian)/user-mode-linux
@@ -19,14 +19,15 @@ endif
 
 # development only targets
 #
-oldconfig: unpack
-	cp config.$(DEB_HOST_ARCH) $(kernel_dir)
+copy-config:
+	cp config.$(DEB_HOST_ARCH) $(kernel_dir)/.config
+
+oldconfig: unpack copy-config
 	make -C $(kernel_dir) oldconfig ARCH=um
 	cp config.$(DEB_HOST_ARCH) config.$(DEB_HOST_ARCH).oldconfig.old
 	cp $(kernel_dir)/.config config.$(DEB_HOST_ARCH)
 
-menuconfig: unpack
-	cp config.$(DEB_HOST_ARCH) $(kernel_dir)
+menuconfig: unpack copy-config
 	make -C $(kernel_dir)  menuconfig ARCH=um
 	cp config.$(DEB_HOST_ARCH) config.$(DEB_HOST_ARCH).menuconfig.old
 	cp $(kernel_dir)/.config config.$(DEB_HOST_ARCH)
