--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,8 @@ Source: user-mode-linux
 Section: misc
 Priority: extra
 Maintainer: User Mode Linux Maintainers <pkg-uml-pkgs@lists.alioth.debian.org>
-Build-Depends: debhelper (>> 5.0.0), dpatch, linux-source-2.6.21, docbook-to-man, bzip2, m4, module-init-tools
-Uploaders: Andreas Schuldei <andreas@schuldei.org>, Mattia Dongili <malattia@debian.org>, Stefano Melchior <stefano.melchior@openlabs.it>
+Build-Depends: debhelper (>> 5.0.0), dpatch, linux-source-2.6.22, docbook-to-man, bzip2, m4, module-init-tools
+Uploaders: Mattia Dongili <malattia@debian.org>, Stefano Melchior <stefano.melchior@openlabs.it>
 Standards-Version: 3.7.2
 
 Package: user-mode-linux
