--- a/debian/rules
+++ b/debian/rules
@@ -6,7 +6,7 @@
 #export DH_VERBOSE=1
 
 config_target:=oldconfig
-kernel_version:=2.6.22
+kernel_version:=2.6.23
 kernel_dir:=linux-source-$(kernel_version)
 debian:=$(CURDIR)/debian
 tmp:=$(debian)/user-mode-linux
@@ -46,8 +46,8 @@ patch-stamp: unpack-stamp
 	dpatch --workdir $(kernel_dir) apply-all
 	touch $@
 
-$(kernel_dir)/.config: config.$(DEB_HOST_ARCH)
-	cp $^ $@
+$(kernel_dir)/.config: config.$(DEB_HOST_ARCH) unpack
+	cp $< $@
 
 configure: configure-stamp
 configure-stamp: patch-stamp $(kernel_dir)/.config
