- update for 2.6.24 - refresh 03_uml_switch.patch - refresh config - add build dependency on libvdeplug to build the vde driver

--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: user-mode-linux
 Section: misc
 Priority: extra
 Maintainer: User Mode Linux Maintainers <pkg-uml-pkgs@lists.alioth.debian.org>
-Build-Depends: debhelper (>> 5.0.0), dpatch, linux-source-2.6.23, docbook-to-man, bzip2, m4, module-init-tools
+Build-Depends: debhelper (>> 5.0.0), dpatch, linux-source-2.6.24, docbook-to-man, bzip2, m4, module-init-tools, libvdeplug2-dev
 Uploaders: Mattia Dongili <malattia@debian.org>, Stefano Melchior <stefano.melchior@openlabs.it>
 Standards-Version: 3.7.3
 
