--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Standards-Version: 3.7.3
 
 Package: user-mode-linux
 Architecture: i386 amd64
-Depends: uml-utilities (>= 20040406-1)
+Depends: ${shlibs:Depends}, uml-utilities (>= 20040406-1)
 Suggests: x-terminal-emulator, rootstrap, user-mode-linux-doc, slirp, linux-patch-skas
 Description: User-mode Linux (kernel)
  User-mode Linux (UML) is a port of the Linux kernel to its own system
