--- a/debian/rules
+++ b/debian/rules
@@ -86,6 +86,7 @@ install: build
 	dh_testroot
 	dh_clean -k
 	dh_installdirs usr/bin usr/lib/uml usr/share/doc/user-mode-linux
+	install -D -m 0644 debian/user-mode-linux.lintian debian/user-mode-linux/usr/share/lintian/overrides/user-mode-linux
 
 	install $(kernel_dir)/linux $(tmp)/usr/bin/linux.uml
 	$(MAKE) -C $(kernel_dir) modules_install ARCH=um SUBARCH=$(SUBARCH) \
