--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,5 @@
 Source: user-mode-linux
-Section: misc
+Section: kernel
 Priority: extra
 Maintainer: User Mode Linux Maintainers <pkg-uml-pkgs@lists.alioth.debian.org>
 Build-Depends: debhelper (>> 5.0.0), quilt, linux-source-2.6.32, docbook-to-man, bzip2, m4, module-init-tools, libvdeplug2-dev, libpcap-dev
