--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Build-Depends: debhelper (>> 5.0.0), quilt, linux-source-3.2, docbook-to-man, bz
 Uploaders: Mattia Dongili <malattia@debian.org>
 Standards-Version: 3.8.3
 Vcs-Git: git://git.debian.org/git/pkg-uml/user-mode-linux.git
-Vcs-Browser: http://git.debian.org/?p=pkg-uml/user-mode-linux.git
+Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-uml/user-mode-linux.git
 
 
 Package: user-mode-linux
