--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: kernel
 Priority: extra
 Maintainer: User Mode Linux Maintainers <pkg-uml-pkgs@lists.alioth.debian.org>
 Build-Depends: debhelper (>> 5.0.0), quilt, linux-source-3.2, docbook-to-man, bzip2, m4, module-init-tools, libvdeplug2-dev, libpcap-dev
-Uploaders: Mattia Dongili <malattia@debian.org>
+Uploaders: Mattia Dongili <malattia@debian.org>, Ritesh Raj Sarraf <rrs@debian.org>
 Standards-Version: 3.8.3
 Vcs-Git: git://git.debian.org/git/pkg-uml/user-mode-linux.git
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-uml/user-mode-linux.git
