Revert "drop duplicate changelog installation"
This reverts commit e9e55a7d6e3419126d1b17bb1798c9a9ca6f496c.

--- a/debian/rules
+++ b/debian/rules
@@ -134,6 +134,7 @@ binary-arch: build install
 	dh_installman linux.uml.1
 	dh_installinfo
 #	dh_undocumented
+	dh_installchangelogs $(CURDIR)/debian/changelog
 	dh_link
 	dh_strip
 	dh_compress
