--- a/debian/rules
+++ b/debian/rules
@@ -8,6 +8,7 @@
 config_target:=oldconfig
 kernel_version:=3.2
 kernel_dir:=linux-source-$(kernel_version)
+BUILT_USING := $(shell dpkg-query -f '$${binary:Package} (= $${source:Version}), ' -W linux-source-$(kernel_version))
 debian:=$(CURDIR)/debian
 tmp:=$(debian)/user-mode-linux
 tmpmodules:=$(debian)/uml-modules
@@ -143,7 +144,7 @@ binary-arch: build install
 	dh_installdeb
 #	dh_perl
 	dh_shlibdeps
-	dh_gencontrol
+	dh_gencontrol -- -VBuilt-Using="$(BUILT_USING)"
 	dh_md5sums
 	dh_builddeb
 
