--- a/debian/rules
+++ b/debian/rules
@@ -8,7 +8,7 @@
 config_target:=oldconfig
 kernel_version:=3.2
 kernel_dir:=linux-source-$(kernel_version)
-BUILT_USING := $(shell dpkg-query -f '$${binary:Package} (= $${source:Version}), ' -W linux-source-$(kernel_version))
+BUILT_USING := $(shell dpkg-query -f '$${source:Package} (= $${source:Version}), ' -W linux-source-$(kernel_version))
 debian:=$(CURDIR)/debian
 tmp:=$(debian)/user-mode-linux
 tmpmodules:=$(debian)/uml-modules
