--- a/debian/rules
+++ b/debian/rules
@@ -6,7 +6,7 @@
 #export DH_VERBOSE=1
 
 config_target:=oldconfig
-kernel_version:=3.8
+kernel_version:=3.11
 kernel_src:=linux-source-$(kernel_version)
 BUILT_USING := $(shell dpkg-query -f '$${source:Package} (= $${source:Version}), ' -W linux-source-$(kernel_version))
 debian:=$(CURDIR)/debian
@@ -45,7 +45,7 @@ menuconfig: unpack copy-config
 
 unpack: unpack-stamp
 unpack-stamp:
-	tar -x --bzip2 -f /usr/src/linux-source-$(kernel_version).tar.bz2
+	tar -x -f /usr/src/linux-source-$(kernel_version).tar.xz
 	touch $@
 
 patch: patch-stamp
