--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,8 @@ Package: user-mode-linux
 Architecture: i386 amd64
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Built-Using: ${Built-Using}
-Suggests: x-terminal-emulator, rootstrap, user-mode-linux-doc, slirp, vde2, uml-utilities (>= 20040406-1)
+Recommends: uml-utilities (>= 20040406-1)
+Suggests: x-terminal-emulator, rootstrap, user-mode-linux-doc, slirp, vde2
 Description: User-mode Linux (kernel)
  User-mode Linux (UML) is a port of the Linux kernel to its own system
  call interface.  It provides a kind of virtual machine, which runs
