--- a/debian/rules
+++ b/debian/rules
@@ -16,11 +16,8 @@ DEB_HOST_ARCH?=$(shell dpkg-architecture -qDEB_HOST_ARCH)
 #SUBARCH?=$(shell uname -m)
 
 ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
-CFLAGS_KERNEL += -O1
+KBUILDVARS := CFLAGS_KERNEL=-O1
 endif
-
-KBUILDVARS := CFLAGS_KERNEL="$(CFLAGS_KERNEL)" CC="$(CC) -no-pie"
-LD="$(LD) -no-pie"
 
 # development only targets
 #
