--- a/debian/rules
+++ b/debian/rules
@@ -14,6 +14,7 @@ tmp:=$(debian)/user-mode-linux
 tmpmodules:=$(debian)/uml-modules
 DEB_HOST_ARCH?=$(shell dpkg-architecture -qDEB_HOST_ARCH)
 #SUBARCH?=$(shell uname -m)
+DEB_BUILD_OPTIONS ?= "parallel=$(shell getconf _NPROCESSORS_ONLN)"
 
 ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
 KBUILDVARS := CFLAGS_KERNEL=-O1
