--- a/debian/rules
+++ b/debian/rules
@@ -10,8 +10,7 @@ kernel_version:=4.19
 kernel_src:=linux-source-$(kernel_version)
 BUILT_USING := $(shell dpkg-query -f '$${source:Package} (= $${source:Version}), ' -W linux-source-$(kernel_version))
 debian:=$(CURDIR)/debian
-tmp:=$(debian)/user-mode-linux
-tmpmodules:=$(debian)/uml-modules
+tmp:=$(debian)/seine-uml
 DEB_HOST_ARCH?=$(shell dpkg-architecture -qDEB_HOST_ARCH)
 #SUBARCH?=$(shell uname -m)
 DEB_BUILD_OPTIONS ?= "parallel=$(shell getconf _NPROCESSORS_ONLN)"
@@ -25,11 +24,6 @@ endif
 copy-config:
 	cp config.$(DEB_HOST_ARCH) $(kernel_src)/.config
 
-oldconfig32: unpack copy-config
-	make -C $(kernel_src) oldconfig ARCH=um SUBARCH=i386
-	cp config.i386 config.i386.oldconfig.old
-	cp $(kernel_src)/.config config.i386
-
 oldconfig64: unpack copy-config
 	make -C $(kernel_src) oldconfig ARCH=um SUBARCH=x86_64
 	cp config.amd64 config.amd64.oldconfig.old
@@ -42,7 +36,6 @@ menuconfig: unpack copy-config
 
 # 
 # end development only targets
-
 
 unpack: unpack-stamp
 unpack-stamp:
@@ -73,8 +66,8 @@ build-indep: build-stamp
 build-stamp: configure
 	dh_testdir
 
-	$(MAKE) -C $(kernel_src) $(KBUILDVARS) linux modules ARCH=um
-	docbook-to-man linux.sgml > linux.uml.1
+	$(MAKE) -C $(kernel_src) $(KBUILDVARS) linux ARCH=um
+	docbook-to-man linux.sgml > seine-uml.1
 
 	touch $@
 
@@ -84,7 +77,7 @@ clean-unpatched: unpatch
 	dh_testroot
 	rm -f unpack-stamp build-stamp configure-stamp
 
-	rm -rf $(kernel_src) linux.uml.1 $(tmpmodules) changelog
+	rm -rf $(kernel_src) seine-uml.1 changelog
 
 	dh_clean
 
@@ -96,28 +89,13 @@ install: build
 	dh_testdir
 	dh_testroot
 	dh_prep
-	dh_installdirs usr/bin usr/lib/uml usr/share/doc/user-mode-linux
-	install -D -m 0644 debian/user-mode-linux.lintian debian/user-mode-linux/usr/share/lintian/overrides/user-mode-linux
+	dh_installdirs usr/bin usr/lib/seine-uml usr/share/doc/seine-uml
+	install -D -m 0644 debian/seine-uml.lintian debian/seine-uml/usr/share/lintian/overrides/seine-uml
 
-	MODSTRIP=1
-ifeq (,$(findstring nostrip,$(DEB_BUILD_OPTIONS)))
-	MODSTRIP=0
-endif
-	install $(kernel_src)/linux $(tmp)/usr/bin/linux.uml
-
-	$(MAKE) -C $(kernel_src) modules_install \
-		ARCH=um \
-		INSTALL_MOD_PATH=$(tmpmodules) \
-		INSTALL_MOD_STRIP=$(MODSTRIP)
-
-	-rm $(tmpmodules)/lib/modules/*/build
-	-rm $(tmpmodules)/lib/modules/*/source
-	mv $(tmpmodules)/lib/modules \
-		$(tmp)/usr/lib/uml/modules
-	rm -rf $(tmpmodules)
+	install $(kernel_src)/linux $(tmp)/usr/bin/seine-uml
 
 	install -m 644 $(kernel_src)/.config \
-		$(tmp)/usr/share/doc/user-mode-linux/config
+		$(tmp)/usr/share/doc/seine-uml/config
 
 
 # Build architecture-independent files here.
@@ -138,7 +116,7 @@ binary-arch: build install
 #	dh_installmime
 #	dh_installinit
 	dh_installcron
-	dh_installman linux.uml.1
+	dh_installman seine-uml.1
 	dh_installinfo
 #	dh_undocumented
 	dh_installchangelogs $(CURDIR)/debian/changelog
