--- a/contrib/spec/seine-uml.spec.in
+++ b/contrib/spec/seine-uml.spec.in
@@ -4,17 +4,17 @@
 %global provider github
 %global provider_tld com
 %global project chombourger
-%global repo user-mode-linux
+%global repo seine-uml
 %global provider_prefix %{provider}.%{provider_tld}/%{project}/%{repo}
 %global import_path %{provider_prefix}
 %global git0 https://%{provider}.%{provider_tld}/%{project}/%{repo}
 %global commit0 #COMMIT#
 %global shortcommit0 %(c=%{commit0}; echo ${c:0:8})
 
-Name:    user-mode-linux
+Name:    seine-uml
 Version: 4.18.0
 Release: #COMMITDATE#.git%{shortcommit0}%{?dist}
-Summary: User-mode Linux (kernel)
+Summary: User-mode Linux kernel for seine
 License: GPLv2
 URL:     https://%{import_path}
 Source0: %{git0}/archive/%{commit0}/%{repo}-%{shortcommit0}.tar.gz
@@ -29,8 +29,8 @@ BuildRequires: make
 %description
 User-mode Linux (UML) is a port of the Linux kernel to its own system call
 interface. It provides a kind of virtual machine, which runs Linux as a user
-process under another Linux kernel. This is useful for kernel development,
-sandboxes, jails, experimentation, and many other things.
+process under another Linux kernel. It is used by seine to build file-system
+images from a root file-system tarball.
 
 %prep
 %autosetup -Sgit -n %{repo}-%{shortcommit0}
@@ -47,15 +47,17 @@ popd
 
 %install
 install -d %{buildroot}%{_bindir}
-install -p -m 755 linux-4.18/linux %{buildroot}%{_bindir}
+install -p -m 755 linux-4.18/linux %{buildroot}%{_bindir}/seine-uml
 
 %check
 # no tests
 
 %files
-%{_bindir}/linux
+%{_bindir}/seine-uml
 
 %changelog
+* Sun Dec 15 2019 Cedric Hombourger <chombourger@gmail.com>
+- Rename source and binary package to seine-uml
 * Wed Dec 4 2019 Cedric Hombourger <chombourger@gmail.com>
 - Enable the NILFS2 file-system as a kernel built-in
 * Tue Dec 3 2019 Cedric Hombourger <chombourger@gmail.com>
